--- a/index.html
+++ b/index.html
@@ -6,14 +6,11 @@
     <title>Otter</title>
     <link rel="stylesheet" href="style.css">
 </head>
-<div>
-
-
 <body>
-    <h1>An Otter Essay</h1>
- <p>Otters have long,slim bodies and relatively short limbs.Their most striking anatomical features are the powerful
-    webbed feet used to swim, and their seal-like abilities holding breath underwater.
- </p> 
-</div>
+    <div>
+        <h1>An Otter Essay</h1>
+        <p>Otters have long,slim bodies and relatively short limbs.Their most striking anatomical features are the powerful webbed feet used to swim, and their seal-like abilities holding breath underwater.
+        </p> 
+    </div>
 </body>
 </html>
